	PR tree-optimization/58165 	* tree-call-cdce.c (shrink_wrap_one_built_in_call): If 	bi_call must be the last stmt in a bb, don't split_block, instead 	use fallthru edge from it and give up if there is none. 	Release conds vector when returning early.

* g++.dg/opt/pr58165.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@201780 138bc75d-0d04-0410-961f-82ee72b054a4